kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "longhorn.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
